--- a/index.html
+++ b/index.html
@@ -15,115 +15,234 @@
     />
     <!-- your CSS can be added here -->
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>Lab 1</title>
+    <title>Lab 1 - Twitter static page</title>
   </head>
+
   <body>
-    <!--<img class="twitter" src="images/twitter-logo.png" alt="twitter logo" /> -->
-    <!-- this is a comment and is totally ignored -->
-    <div id="general-wrapper">
-      <div id="header">
-        <nav
-          class="navbar navbar-custom fixed-top navbar-expand-lg navbar-light bg-light"
-        >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarContents"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarContents">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link active px-3" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-              <a class="nav-item nav-link px-3" href="#">Moments</a>
-              <a class="nav-item nav-link px-3" href="#">Notifications</a>
-              <a class="nav-item nav-link px-3" href="#">Messages</a>
-              <div id="twitter">
-                <img
-                  class="twitter-img"
-                  src="images/twitter-logo.png"
-                  alt="twitter logo"
-                />
+    <!-- navbar -->
+    <header>
+      <a class="skip" href="#navigation">skip to navigation</a>
+      <nav
+        class="navbar navbar-expand navbar-expand-lg navbar-light bg-light d-flex justify-content-between"
+        role="navigation"
+      >
+        <div class="leftNav d-flex justify-content-lg-between">
+          <div class="navbarHeaders">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Moments</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Notifications</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Messages</a>
+              </li>
+            </ul>
+          </div>
+          <a class="navbar-brand" href="#wrapper"
+            ><img
+              src="images/twitter-logo.png"
+              alt="Twitter Logo"
+              id="twitterLogo"
+          /></a>
+        </div>
+        <div class="headerRight align-items-end">
+          <button class="tweetButton align-end">Tweet</button>
+        </div>
+      </nav>
+    </header>
+
+    <!-- wrapper -->
+    <div id="content-wrapper" class="d-flex justify-content-center">
+      <!-- left -->
+      <div id="content-left" class="d-flex flex-column bg-light">
+        <div class="banner">
+          <img
+            src="images/ratatouille-banner.png"
+            alt="Ratatouille logo banner"
+          />
+        </div>
+        <div id="profileImgAndName" class="d-flex">
+          <img
+            src="images/ratatouille.jpg"
+            alt="profile picture"
+            class="profile-picture"
+            id="profile"
+          />
+          <div id="profileDetails" class="d-flex flex-column">
+            <p class="profileName">
+              <b><u>Remy</u></b>
+            </p>
+            <p class="text-secondary">@remy</p>
+          </div>
+        </div>
+        <div id="statsBox" class="d-flex">
+          <div>
+            <p class="statTitle">Tweets</p>
+            <p class="statNum">5049</p>
+          </div>
+          <div>
+            <p class="statTitle">Following</p>
+            <p class="statNum">324</p>
+          </div>
+          <div>
+            <p class="statTitle">Followers</p>
+            <p class="statNum">809</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- middle -->
+      <div id="contentCenter" class="bg-light" role="main">
+        <div class="tweet">
+          <div class="d-flex">
+            <img
+              src="images/ratatouille.jpg"
+              alt="profile picture"
+              class="profile-picture"
+            />
+            <div class="nextToProfilePic d-flex flex-column">
+              <div class="twoLine d-flex">
+                <p><b>Remy</b></p>
+                <p class="tweetUserInfo">@remy Nov 19</p>
               </div>
-              <a class="nav-item nav-link px-5" href="#"></a>
-              <ul class="nav navbar-nav pull-right">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Tweet </a>
-                </li>
-              </ul>
-              <!--<a class="nav-item tweetButton nav-link px-3" href="#">Tweet</a> -->
+              <p>
+                I'm taking this class called CS 110 and the TAs are all so
+                <br />
+                <span style="font-weight: 900">cool!</span>
+              </p>
             </div>
           </div>
-        </nav>
-      </div>
-      <div id="content-wrapper">
-        <div id="left">
-          <div id="cover-picture">
+        </div>
+        <div class="tweet">
+          <div class="d-flex">
             <img
-              src="images\ratatouille-banner.png"
-              alt="Ratatouille logo banner"
+              src="images/ratatouille.jpg"
+              alt="profile picture"
+              class="profile-picture"
             />
-          </div>
-          <div id="profile-picture">PFP</div>
-          <div id="profile-stats">
-            <table>
-              <thead>
-                <tr>
-                  <th>Tweets</th>
-                  <th>Following</th>
-                  <th>Followers</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>5049</td>
-                  <td>324</td>
-                  <td>809</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="nextToProfilePic d-flex flex-column">
+              <div class="twoLine d-flex">
+                <p><b>Remy</b></p>
+                <p class="tweetUserInfo">@remy Nov 19</p>
+              </div>
+              <p>
+                It's 2007. You just got home from elementary school. Your mom
+                has pizza bagels in the oven. Ratatouille is in theaters. Life
+                is good
+              </p>
+            </div>
           </div>
         </div>
-        <div id="main">
-          <div class="tweet">hi</div>
-          <div class="tweet">hi</div>
-          <div class="tweet">hi</div>
-          <div class="tweet">hi</div>
-          <div class="tweet">hi</div>
-          <div class="tweet">hi</div>
+        <div class="tweet">
+          <div class="d-flex">
+            <img
+              src="images/ratatouille.jpg"
+              alt="profile picture"
+              class="profile-picture"
+            />
+            <div class="nextToProfilePic d-flex flex-column">
+              <div class="twoLine d-flex">
+                <p><b>Remy</b></p>
+                <p class="tweetUserInfo">@remy Nov 19</p>
+              </div>
+              <p>Lets make some pastaa!</p>
+            </div>
+          </div>
         </div>
-        <div id="right">
-          <h3>Who to Follow</h3>
+        <div class="tweet">
+          <div class="d-flex">
+            <img
+              src="images/ratatouille.jpg"
+              alt="profile picture"
+              class="profile-picture"
+            />
+            <div class="nextToProfilePic d-flex flex-column">
+              <div class="twoLine d-flex">
+                <p><b>Remy</b></p>
+                <p class="tweetUserInfo">@remy Nov 19</p>
+              </div>
+              <p>Let's make some pasta!</p>
+            </div>
+          </div>
+        </div>
+        <div class="tweet">
+          <div class="d-flex">
+            <img
+              src="images/ratatouille.jpg"
+              alt="profile picture"
+              class="profile-picture"
+            />
+            <div class="nextToProfilePic d-flex flex-column">
+              <div class="twoLine d-flex">
+                <p><b>Remy</b></p>
+                <p class="tweetUserInfo">@remy Nov 19</p>
+              </div>
+              <p>Lets make some pasta!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- right -->
+      <div id="content-right" class="bg-light">
+        <h5>Who to follow</h5>
+        <div class="whoToFollow d-flex">
+          <img
+            src="images/linguini.png"
+            alt="profile picture"
+            class="profile-picture"
+          />
+          <div class="nextToProfilePic d-flex flex-column">
+            <div class="whoToFollowText d-flex">
+              <p><b>Linguini</b></p>
+              <p class="tweetUserInfo">@linguini</p>
+            </div>
+            <button>Follow</button>
+          </div>
+        </div>
+        <div class="whoToFollow d-flex">
+          <img
+            src="images/ratatouille.jpg"
+            alt="profile picture"
+            class="profile-picture"
+          />
+          <div class="nextToProfilePic d-flex flex-column">
+            <div class="whoToFollowText d-flex">
+              <p><b>CS110 TA</b></p>
+              <p class="tweetUserInfo">@cs</p>
+            </div>
+            <button>Follow</button>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- the following scripts must be added for Bootstrap to function properly.
-            their order is important, don’t mix them up! -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"
-      integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4="
-      crossorigin="anonymous"
-    ></script>
   </body>
+
+  <!-- the following scripts must be added for Bootstrap to function properly.
+            their order is important, don’t mix them up! -->
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"
+    integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4="
+    crossorigin="anonymous"
+  ></script>
 </html>
