--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <body>
     <!-- navbar -->
     <header>
-      <a class="skip" href="#navigation">skip to navigation</a>
       <nav
         class="navbar navbar-expand navbar-expand-lg navbar-light bg-light d-flex justify-content-between"
         role="navigation"
       >
+        <a class="skip" href="#navigation">skip to navigation</a>
         <div class="leftNav d-flex justify-content-lg-between">
           <div class="navbarHeaders">
             <ul class="navbar-nav">
@@ -80,24 +80,24 @@
             <p class="text-secondary">@remy</p>
           </div>
         </div>
-        <div id="statsBox" class="d-flex">
+        <div id="profileStatsBox" class="d-flex">
           <div>
-            <p class="statTitle">Tweets</p>
-            <p class="statNum">5049</p>
+            <p class="profileStatTitle">Tweets</p>
+            <p class="profileStatNum">5049</p>
           </div>
           <div>
-            <p class="statTitle">Following</p>
-            <p class="statNum">324</p>
+            <p class="profileStatTitle">Following</p>
+            <p class="profileStatNum">324</p>
           </div>
           <div>
-            <p class="statTitle">Followers</p>
-            <p class="statNum">809</p>
+            <p class="profileStatTitle">Followers</p>
+            <p class="profileStatNum">809</p>
           </div>
         </div>
       </div>
 
       <!-- middle -->
-      <div id="contentCenter" class="bg-light" role="main">
+      <div id="content-center" class="bg-light" role="main">
         <div class="tweet">
           <div class="d-flex">
             <img
@@ -150,7 +150,7 @@
                 <p><b>Remy</b></p>
                 <p class="tweetUserInfo">@remy Nov 19</p>
               </div>
-              <p>Lets make some pastaa!</p>
+              <p>Lets make some pasta!</p>
             </div>
           </div>
         </div>
