--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       >
         <a class="skip" href="#navigation">skip to navigation</a>
         <div class="leftNav d-flex justify-content-lg-between">
-          <div class="navbarHeaders">
+          <div class="navbarHeader">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="#">Home</a>
@@ -66,7 +66,7 @@
             alt="Ratatouille logo banner"
           />
         </div>
-        <div id="profileImgAndName" class="d-flex">
+        <div id="profileBlock" class="d-flex">
           <img
             src="images/ratatouille.jpg"
             alt="profile picture"
